[tool.poetry]
name = "hw7"
version = "0.1.0"
description = ""
authors = ["Aditya Rathod <15635979+adityarathod@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
jupyterlab = "^3.6.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

